--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,27 @@
 # Copy from .env.local on the Vercel dashboard
+# Recommended for most uses
+DATABASE_URL=postgres://neondb_owner:npg_bOw7KeBiMS0F@ep-fragrant-fog-a4eiht8b-pooler.us-east-1.aws.neon.tech/neondb?sslmode=require
+
+# For uses requiring a connection without pgbouncer
+DATABASE_URL_UNPOOLED='postgresql://neondb_owner:npg_bOw7KeBiMS0F@ep-fragrant-fog-a4eiht8b.us-east-1.aws.neon.tech/neondb?sslmode=require'
+
+# Parameters for constructing your own connection string
+PGHOST=ep-fragrant-fog-a4eiht8b-pooler.us-east-1.aws.neon.tech
+PGHOST_UNPOOLED=ep-fragrant-fog-a4eiht8b.us-east-1.aws.neon.tech
+PGUSER=neondb_owner
+PGDATABASE=neondb
+PGPASSWORD=npg_bOw7KeBiMS0F
+
+# Parameters for Vercel Postgres Templates
+POSTGRES_URL=postgres://neondb_owner:npg_bOw7KeBiMS0F@ep-fragrant-fog-a4eiht8b-pooler.us-east-1.aws.neon.tech/neondb?sslmode=require
+POSTGRES_URL_NON_POOLING=postgres://neondb_owner:npg_bOw7KeBiMS0F@ep-fragrant-fog-a4eiht8b.us-east-1.aws.neon.tech/neondb?sslmode=require
+POSTGRES_USER=neondb_owner
+POSTGRES_HOST=ep-fragrant-fog-a4eiht8b-pooler.us-east-1.aws.neon.tech
+POSTGRES_PASSWORD=npg_bOw7KeBiMS0F
+POSTGRES_DATABASE=neondb
+POSTGRES_URL_NO_SSL=postgres://neondb_owner:npg_bOw7KeBiMS0F@ep-fragrant-fog-a4eiht8b-pooler.us-east-1.aws.neon.tech/neondb
+POSTGRES_PRISMA_URL=postgres://neondb_owner:npg_bOw7KeBiMS0F@ep-fragrant-fog-a4eiht8b-pooler.us-east-1.aws.neon.tech/neondb?connect_timeout=15&sslmode=require
 # https://nextjs.org/learn/dashboard-app/setting-up-your-database#create-a-postgres-database
-POSTGRES_URL=
-POSTGRES_PRISMA_URL=
-POSTGRES_URL_NON_POOLING=
-POSTGRES_USER=
-POSTGRES_HOST=
-POSTGRES_PASSWORD=
-POSTGRES_DATABASE=
 
 # `openssl rand -base64 32`
 AUTH_SECRET=
